# pasmo

./: .gitignore  CMakeLists.txt  readme.txt
pasmo/: asm.cpp  asm.h  asmfile.cpp  asmfile.h  main.cpp  pasmo.cpp  pasmo.h  pasmo.vcxproj  pasmotypes.cpp  pasmotypes.h  token.cpp  token.h
pasmoNext.xcodeproj/: project.pbxproj
pasmoNext.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pasmoNext.xcodeproj/project.xcworkspace/xcuserdata/ckirby101.xcuserdatad/: UserInterfaceState.xcuserstate
pasmoNext.xcodeproj/xcshareddata/xcschemes/: pasmoNext.xcscheme
pasmoNext.xcodeproj/xcuserdata/ckirby101.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
pasmoNext.xcodeproj/xcuserdata/ckirby101.xcuserdatad/xcschemes/: xcschememanagement.plist
